--- a/include/before_body.html
+++ b/include/before_body.html
@@ -7,11 +7,11 @@
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li><a href="./index.html">Home</a></li>
-        <li><a href="https://github.com/yutannihilation/rmarkdown-website-template">Github</a></li>
+        <li><a href="https://github.com/TheBurningMap">Github</a></li>
         <li class="dropdown">
           <a href="authoring" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Pages<span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">          <li><a href="test.html">test</a></li>
-          <li><a href="test2.html">test2</a></li>
+          <ul class="dropdown-menu" role="menu">          <li><a href="test.html">List 1</a></li>
+          <li><a href="test2.html">List 2</a></li>
           </ul>
         </li>
       </ul>
